# py15_djanopt

./: pyproject.toml
devanopt/: db.sqlite3  devan_booking_r2.csv  manage.py  warehouse_db.csv
devanopt/cntr/: admin.py  apps.py  devan_opt.py  forms.py  models.py  views.py
devanopt/cntr/management/commands/: create_capacity_data.py
devanopt/cntr/migrations/: 0001_initial.py
devanopt/cntr/static/cntr/: apps.js  custom.js  styles.css
devanopt/cntr/static/css/: styles.css
devanopt/cntr/static/js/: apps.js
devanopt/cntr/templates/cntr/: base.html  display_csv.html  frontpage.html  schedule.html  warehouse_capacity.html  warehouse_capacity_upload.html
devanopt/devanopt/: asgi.py  settings.py  urls.py  wsgi.py
